<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.milczekt1</groupId>
    <artifactId>chassis</artifactId>
    <version>0.5.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>chassis-tools-test</module>
        <module>chassis-tools</module>
        <module>chassis-bom</module>
        <module>chassis-parent</module>
        <module>chassis-dependencies</module>
        <module>chassis-test-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <springboot.version>4.0.3</springboot.version>
        <spring-cloud-dependencies.version>2025.1.1</spring-cloud-dependencies.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.organization>milczekt1</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.projectKey>MilczekT1_Chassis</sonar.projectKey>
        <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
    </properties>

    <developers>
        <developer>
            <id>Konrad</id>
            <name>Konrad Boniecki</name>
            <email>konrad_boniecki@hotmail.com</email>
        </developer>
    </developers>
    <scm>
        <developerConnection>scm:git:https://github.com/MilczekT1/Chassis.git</developerConnection>
    </scm>
    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/milczekt1/Chassis</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>maven-central</id>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/milczekt1/*</url>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <!--Versions to be used in this project, project should inherit from chassis-parent-->
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.14</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>3.5.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.5.4</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.1.1</version>
            </plugin>
        </plugins>
    </build>
</project>
